# russian-language-analyzer

./: .gitignore  CMakeLists.txt  README.md  russian-language-analyzer.sln
include/: foo.hpp
russian-language-analyzer/: Adjective.cpp  Adjective.h  Noun.cpp  Pronoun.cpp  Pronoun.h  ShortAdjective.cpp  ShortAdjective.h  Utils.h  Verb.h  Word.cpp  Word.h  main.cpp  russian-language-analyzer.vcxproj  russian-language-analyzer.vcxproj.filters
russian-language-analyzer/include/: Adjective.h  Adverb.h  Noun.h  Pronoun.h  Sentence.h  ShortAdjective.h  Utils.h  Verb.h  Word.h
russian-language-analyzer/source/: Adjective.cpp  Adverb.cpp  Noun.cpp  Pronoun.cpp  Sentence.cpp  ShortAdjective.cpp  Utils.cpp  Verb.cpp  Word.cpp  main.cpp
russian-language-analyzer/test/: main.cpp  test_Noun.cpp  test_Sentence.cpp  test_Verb.cpp
src/: foo.cpp  main.cpp
test/: foo.cpp  main.cpp  module.hpp
